Update styling to prevent overflow

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -50,6 +50,7 @@ button {
 .display {
   height: 75px;
   width: 249px;
+  overflow-x: scroll;
   background-color: #101116;
   border: 0;
   color: #fff;
